[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Step.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/MainSystem.gd" type="Script" id=2]
[ext_resource path="res://graphics/play_icon.png" type="Texture" id=3]

[node name="MainSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
_bpm = 90

[node name="MasterClock" type="Timer" parent="."]

[node name="Step0" parent="." groups=["track1"] instance=ExtResource( 1 )]
margin_left = 192.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 192.0

[node name="Step1" parent="." groups=["track1"] instance=ExtResource( 1 )]
margin_left = 320.0
margin_top = 128.0
margin_right = 384.0
margin_bottom = 192.0

[node name="Step2" parent="." groups=["track1"] instance=ExtResource( 1 )]
margin_left = 448.0
margin_top = 128.0
margin_right = 512.0
margin_bottom = 192.0

[node name="Step3" parent="." groups=["track1"] instance=ExtResource( 1 )]
margin_left = 576.0
margin_top = 128.0
margin_right = 640.0
margin_bottom = 192.0

[node name="PlayButton" type="Button" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 256.0
margin_bottom = 320.0
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[connection signal="timeout" from="MasterClock" to="." method="_on_MasterClock_timeout"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[editable path="Step0"]
